[tool.poetry]
name = "at"
version = "0.1.0"
description = ""
authors = ["hulige <602099793@qq.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.4.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
